--- a/main.html
+++ b/main.html
@@ -9,12 +9,14 @@
 <body>
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
 	<div class="head">
 		<h1>Shaw's News</h1>
 	</div>
+	</header>
 	<div class="parent">
-		<div class="child1">
-			<h4>Latest News Articles</h4>
+		<div class="latest-news-section">
+			<h3>Latest News Articles</h3>
 			<ul>
 				<li>Article 1</li>
 				<li>Article 2</li>
@@ -25,8 +27,8 @@
 			<h2>Main Article</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-		<div class="child3">
-			<h4>Pictorial News</h4>
+		<div class="pictorial-news-section">
+			<h3>Pictorial News</h3>
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" >
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
 			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
